fixed bottom margin of hide show button so it is not clipped

--- a/src/components/ColorComponentViewToggle/ColorComponentViewToggle.scss
+++ b/src/components/ColorComponentViewToggle/ColorComponentViewToggle.scss
@@ -11,6 +11,7 @@ $button-active-color: $grey-6;
   width: 5em;
   margin-left: 0.9rem;
   margin-right: 0.95rem;
+  margin-bottom: 0.1em;
 
   .button {
     background: transparent;
